2013-07-21  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-saved-frame-states):
	Rename from desktop--saved-states; all users changed.
	(desktop-save-frames): Rename from desktop--save-frames.
	Do not save state to desktop file.
	(desktop-save): Save desktop-saved-frame-states to desktop file
	and reset to nil.
	(desktop-restoring-frames-p): New function.
	(desktop-restore-frames): Use it.  Rename from desktop--restore-frames.
	(desktop-read): Use desktop-restoring-frames-p.  Do not try to fix
	buffer-lists when restoring frames.  Suggested by Martin Rudalics.

	* desktop.el: Correctly restore iconified frames.
	(desktop--filter-iconified-position): New function.
	(desktop-filter-parameters-alist): Add entries for `top' and `left'.

2013-07-20  Glenn Morris  <rgm@gnu.org>

	* progmodes/gdb-mi.el (gdb-delete-handler, gdb-stopped):
	Let `message' do the formatting.
	(def-gdb-preempt-display-buffer): Add explicit format.

	* image-dired.el (image-dired-track-original-file):
	Use with-current-buffer.
	(image-dired-track-thumbnail): Use with-current-buffer.
	Avoid changing point of wrong window.

	* image-dired.el (image-dired-track-original-file):
	Avoid changing point of wrong window.  (Bug#14909)

2013-07-20  Richard Copley  <rcopley@gmail.com>  (tiny change)

	* progmodes/gdb-mi.el (gdb-done-or-error):
	Guard against "%" in gdb output.  (Bug#14127)

2013-07-20  Andreas Schwab  <schwab@linux-m68k.org>

	* progmodes/sh-script.el (sh-read-variable): Remove interactive spec.
	(Bug#14826)

	* international/mule.el (coding-system-iso-2022-flags): Fix last
	change.

2013-07-20  Kenichi Handa  <handa@gnu.org>

	* international/mule.el (coding-system-iso-2022-flags):
	Add `8-bit-level-4'.  (Bug#8522)

2013-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-mouse-browse-url): New command and keystroke
	(bug#14815).

	* net/eww.el (eww-process-text-input): Allow inputting when the
	point is at the start of the line, as the properties aren't